@@ -621,6 +621,15 @@
     <fail unless="continueOnFailure">Tests failed!</fail>
   </target>
 
+  <target name="test-contrib" depends="compile-hdfs-test" description="Run contrib unit tests">
+    <subant target="test">
+       <property name="version" value="${version}"/>
+       <property name="hadoop-version" value="${hadoop-core.version}"/>
+       <property name="clover.jar" value="${clover.jar}"/>
+       <fileset file="${contrib.dir}/build.xml"/>
+    </subant> 
+  </target> 
+
   <target name="test-core" description="Run hdfs unit tests">
     <delete file="${test.build.dir}/testsfailed"/>
     <property name="continueOnFailure" value="true"/>
